fixed menu links hover jump

--- a/component-lib/src/molecules/Menu/Menu.pcss
+++ b/component-lib/src/molecules/Menu/Menu.pcss
@@ -53,7 +53,7 @@
         display: none;
 
         @media all and (min-width: rem(1120)) {
-            display: inline-block;
+            display: block;
         }
 
         &:hover {
@@ -74,6 +74,7 @@
         &:hover {
             text-decoration: none;
             border: none;
+            margin-top: 0;
         }
     }
 
@@ -105,6 +106,10 @@
         display: block;
         border: none;
         margin-bottom: 1rem;
+
+        &:hover {
+            margin-top: -1px;
+        }
     }
 
     &__search {
